--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@ethersproject/units": "^5.5.0",
+    "@usedapp/coingecko": "^0.3.24",
+    "@usedapp/core": "^0.5.4",
+    "ethers": "^5.5.1",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "web3": "^1.6.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
